# blocchat-be

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  blocchat-key.pem  dev.sh  docker-compose.yml
migrations/: 001_create_transactions.sql  002_create_token_gates.sql  003_create_shops.sql  004_create_user_profiles.sql  005_create_public_groups.sql  006_create_alpha_bot.sql  007_create_feeds.sql  008_add_basename_to_profiles.sql
src/: main.rs
src/db/: mod.rs
src/handlers/: admin.rs  ai.rs  alpha_bot.rs  feeds.rs  groups.rs  health.rs  mod.rs  payments.rs  profiles.rs  shops.rs  token_gates.rs  typing.rs
src/middleware/: auth.rs
src/models/: admin.rs  alpha_bot.rs  feed.rs  group.rs  mod.rs  payment.rs  profile.rs  shop.rs  token_gate.rs
src/services/: admin_service.rs  alpha_bot_service.rs  event_watcher.rs  feed_poller.rs  feed_service.rs  group_service.rs  mod.rs  payment_service.rs  profile_service.rs  shop_service.rs  token_gate_service.rs
